--- a/.github/workflows/clang-tests.yml
+++ b/.github/workflows/clang-tests.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'release/**'
+      - 'release_*x'
     paths:
       - 'clang/**'
       - '.github/workflows/clang-tests.yml'
@@ -15,7 +15,7 @@ on:
       - '!llvm/**'
   pull_request:
     branches:
-      - 'release/**'
+      - 'release_*x'
     paths:
       - 'clang/**'
       - '.github/workflows/clang-tests.yml'
