[workflows] Update path to Flang build directory
The following Flang commit has changed the default location of the Flang build
directory, resulting in CI failures in the classic-flang-llvm-project:

https://github.com/flang-compiler/flang/commit/054bde36125cfd1d15581fec6eaaac79e63213bb

This patch updates the path name in the CI workflows.

--- a/.github/workflows/flang-tests.yml
+++ b/.github/workflows/flang-tests.yml
@@ -73,9 +73,9 @@ jobs:
       - name: Copy llvm-lit
         run: |
           cd ../../flang
-          cp ../classic-flang-llvm-project/classic-flang-llvm-project/build/bin/llvm-lit build/bin/.
+          cp ../classic-flang-llvm-project/classic-flang-llvm-project/build/bin/llvm-lit build/flang/bin/
 
       - name: Test flang
         run: |
-          cd ../../flang/build
+          cd ../../flang/build/flang
           make check-all
