--- a/.github/workflows/flang-arm64-tests.yml
+++ b/.github/workflows/flang-arm64-tests.yml
@@ -62,9 +62,9 @@ jobs:
       - name: Copy llvm-lit
         run: |
           cd ${{ env.build_path }}/flang
-          cp ${{ env.build_path }}/classic-flang-llvm-project/build/bin/llvm-lit build/bin/.
+          cp ${{ env.build_path }}/classic-flang-llvm-project/build/bin/llvm-lit build/flang/bin/
 
       - name: Test flang
         run: |
-          cd ${{ env.build_path }}/flang/build
+          cd ${{ env.build_path }}/flang/build/flang
           make check-all
