[build] Specify LLVM_MAIN_SRC_DIR when running build-flang.sh
Otherwise Classic Flang's CMakeLists.txt will be unable to find llvm-lit and
cannot generate test-related goals, e.g. `check-all`.

--- a/.github/workflows/flang-arm64-tests.yml
+++ b/.github/workflows/flang-arm64-tests.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build and install libpgmath & flang
         run: |
           cd ${{ env.build_path }}/flang
-          ./build-flang.sh -t ${{ matrix.target }} -p ${{ env.install_prefix }} -n $(nproc)
+          ./build-flang.sh -t ${{ matrix.target }} -p ${{ env.install_prefix }} -n $(nproc) -l ${{ env.build_path }}/classic-flang-llvm-project/llvm
 
       - name: Copy llvm-lit
         run: |
